# backend/app/Models/Category.php
@@ -18,4 +18,9 @@ class Category extends Model
     {
         return $this->belongsTo(User::class);
     }
+
+    public function favorites()
+    {
+        return $this->morphMany(Favorite::class, 'favoritable');
+    }
 }
